Remove RequestBeaconOrigin from the protocol

--- a/contracts/nois-gateway/Cargo.toml
+++ b/contracts/nois-gateway/Cargo.toml
@@ -26,3 +26,4 @@ serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 
 [dev-dependencies]
+nois-proxy = { path = "../../contracts/nois-proxy"}
