--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ workflows:
       - contract_nois_gateway
       - contract_nois_icecube
       - contract_nois_sink
+      - contract_nois_payment
       - contract_nois_proxy
       - contract_nois_monitoring
       - coverage
@@ -164,6 +165,36 @@ jobs:
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
           key: v2-contract_nois_sink-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+
+  contract_nois_payment:
+    docker:
+      - image: rust:1.65.0
+    working_directory: ~/project/contracts/nois-sink
+    steps:
+      - checkout:
+          path: ~/project
+      - run:
+          name: Version information
+          command: rustc --version; cargo --version; rustup --version
+      - restore_cache:
+          keys:
+            - v2-contract_nois_payment-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_payment-rust:1.65.0-
+      - run:
+          name: Unit Tests
+          environment:
+            RUST_BACKTRACE: 1
+          command: cargo unit-test --locked
+      - run:
+          name: Build and run schema generator
+          command: cargo schema --locked
+      - save_cache:
+          paths:
+            - /usr/local/cargo/registry
+            - ~/project/target/debug/.fingerprint
+            - ~/project/target/debug/build
+            - ~/project/target/debug/deps
+          key: v2-contract_nois_payment-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_gateway:
     docker:
