--- a/contracts/nois-payment/Cargo.toml
+++ b/contracts/nois-payment/Cargo.toml
@@ -17,7 +17,7 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = { version = "1.2.1", features = ["iterator"] }
+cosmwasm-std = { version = "1.2.1" }
 cosmwasm-schema = { version = "1.2.1" }
 cw-storage-plus = { version = "1.0.0" }
 nois.workspace = true
