--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -464,8 +464,8 @@ jobs:
           command: ../ci-scripts/wasmd/start.sh
           background: true
       - run: # start early for less wait time below
-          name: Start osmosisd
-          command: ../ci-scripts/osmosis/start.sh
+          name: Start nois
+          command: ../ci-scripts/nois/start.sh
           background: true
       - run:
           # TODO: check if still needed with 20.04
@@ -492,8 +492,8 @@ jobs:
           command: |
             echo "Wait for wasmd..."
             timeout 60 bash -c "until curl -s http://localhost:26659/status > /dev/null; do sleep 0.5; done"
-            echo "Wait for osmsoisd..."
-            timeout 60 bash -c "until curl -s http://localhost:26653/status > /dev/null; do sleep 0.5; done"
+            echo "Wait for nois..."
+            timeout 60 bash -c "until curl -s http://localhost:26655/status > /dev/null; do sleep 0.5; done"
             sleep 1
             echo "Chains up and running!"
       - attach_workspace:
@@ -513,7 +513,7 @@ jobs:
           name: Stop chains
           command: |
             ../ci-scripts/wasmd/stop.sh
-            ../ci-scripts/osmosis/stop.sh
+            ../ci-scripts/nois/stop.sh
 
 
   # This job roughly follows the instructions from https://circleci.com/blog/publishing-to-github-releases-via-circleci/
