--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -459,6 +459,13 @@ jobs:
     steps:
       - checkout:
           path: ~/ibc
+      - run:
+          # TODO: check if still needed with 20.04
+          # The images ubuntu-1604 comes with preinstalled nvm, which does not work well with non-login shells
+          # We do this before running other scripts in parallel to avoid trouble when starting bash sessions.
+          name: Uninstall nvm
+          # Moving to trash is faster than deleting (gvfs-trash is not installed on this image)
+          command: mkdir -p ~/.local/share/Trash && mv "$NVM_DIR" ~/.npm ~/.local/share/Trash
       - run: # start early for less wait time below
           name: Start wasmd
           command: ../ci-scripts/wasmd/start.sh
@@ -467,12 +474,6 @@ jobs:
           name: Start nois
           command: ../ci-scripts/nois/start.sh
           background: true
-      - run:
-          # TODO: check if still needed with 20.04
-          # The images ubuntu-1604 comes with preinstalled nvm, which does not work well with non-login shells
-          name: Uninstall nvm
-          # Moving to trash is faster than deleting (gvfs-trash is not installed on this image)
-          command: mkdir -p ~/.local/share/Trash && mv "$NVM_DIR" ~/.npm ~/.local/share/Trash
       - run:
           name: Install nodejs
           # In the current image, `sudo apt install nodejs` requires `sudo apt update` which is too slow
