--- a/contracts/nois-gateway/Cargo.toml
+++ b/contracts/nois-gateway/Cargo.toml
@@ -26,5 +26,6 @@ cosmwasm-schema = { version = "1.2.3" }
 cw-storage-plus = { version = "1.0.0" }
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
+sha2 = "0.10.6"
 
 [dev-dependencies]
