--- a/contracts/nois-gateway/Cargo.toml
+++ b/contracts/nois-gateway/Cargo.toml
@@ -20,7 +20,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 nois-protocol = { path = "../../packages/nois-protocol"}
 drand-common = { path = "../../packages/drand-common" }
 nois.workspace = true
-cosmwasm-std = { version = "1.2.3", features = ["iterator", "ibc3"] }
+cosmwasm-std = { version = "1.2.3", features = ["iterator", "ibc3", "cosmwasm_1_2"] }
 cosmwasm-schema = { version = "1.2.3" }
 cw-storage-plus = { version = "1.0.0" }
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
