--- a/packages/multitest/Cargo.toml
+++ b/packages/multitest/Cargo.toml
@@ -20,6 +20,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 nois-drand = { path = "../../contracts/nois-drand"}
 nois-gateway = { path = "../../contracts/nois-gateway"}
 nois-icecube = { path = "../../contracts/nois-icecube"}
+nois-payment = { path = "../../contracts/nois-payment" }
 nois-proxy = { path = "../../contracts/nois-proxy" }
 
 cosmwasm-std = { version = "1.2.3", features = ["iterator", "ibc3"] }
