Test and fix MsgFundCommunityPool encoding

--- a/contracts/nois-payment/Cargo.toml
+++ b/contracts/nois-payment/Cargo.toml
@@ -24,3 +24,6 @@ anything = { path = "../../packages/anything" }
 nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
+
+[dev-dependencies]
+hex = { version = "0.4" }
