--- a/contracts/nois-airdrop/Cargo.toml
+++ b/contracts/nois-airdrop/Cargo.toml
@@ -17,6 +17,7 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
+nois.workspace = true
 cosmwasm-std = { version = "1.2.3" }
 cosmwasm-schema = { version = "1.2.3" }
 cw-storage-plus = { version = "1.0.0" }
