--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -18,6 +18,10 @@ backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
+# When the contract is owned by governance of the chain, sudo messages are exposed
+# that allow withdrawing funds.
+governance_owned = []
+
 [dependencies]
 nois-protocol = { path = "../../packages/nois-protocol"}
 cosmwasm-std = { version = "1.2.3", features = ["iterator", "ibc3"] }
