--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -22,8 +22,11 @@ library = []
 # that allow withdrawing funds.
 governance_owned = []
 
+default = ["governance_owned"]
+
 [dependencies]
 nois-protocol = { path = "../../packages/nois-protocol"}
+anything = { path = "../../packages/anything" }
 cosmwasm-std = { version = "1.2.3", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.2.3" }
 cw-storage-plus = { version = "1.0.0" }
