--- a/contracts/nois-payment/Cargo.toml
+++ b/contracts/nois-payment/Cargo.toml
@@ -17,10 +17,10 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
+anybuf = "0.1.0"
 cosmwasm-std = { version = "1.2.3", features = ["stargate"] }
 cosmwasm-schema = { version = "1.2.3" }
 cw-storage-plus = { version = "1.0.0" }
-anything = { path = "../../packages/anything" }
 nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
