--- a/contracts/nois-drand/Cargo.toml
+++ b/contracts/nois-drand/Cargo.toml
@@ -18,6 +18,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 nois.workspace = true
+nois-gateway = { path = "../../contracts/nois-gateway" }
 drand-common = { path = "../../packages/drand-common" }
 cosmwasm-std = { version = "1.2.5", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.2.5" }
