--- a/packages/drand-common/Cargo.toml
+++ b/packages/drand-common/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 cosmwasm-std = { version = "1.2.5", features = ["iterator", "ibc3"] }
+cosmwasm-schema = { version = "1.2.5" }
 
 [dev-dependencies]
