--- a/packages/multitest/Cargo.toml
+++ b/packages/multitest/Cargo.toml
@@ -22,6 +22,7 @@ nois-gateway = { path = "../../contracts/nois-gateway"}
 nois-icecube = { path = "../../contracts/nois-icecube"}
 nois-payment = { path = "../../contracts/nois-payment" }
 nois-proxy = { path = "../../contracts/nois-proxy" }
+nois-proxy-governance-owned = { path = "../../contracts/nois-proxy-governance-owned" }
 
 cosmwasm-std = { version = "1.2.5", features = ["iterator", "ibc3"] }
 cw-multi-test = "0.16.2"
