--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -488,11 +488,13 @@ jobs:
             done
       - run:
           name: Optimizing Wasm
+          # We use --signext-lowering to avoid sign extension problems with CosmWasm < 1.3.
+          # Also using -O1 instead of -Os here saves a lot of CI time.
           command: |
             mkdir -p ./wasm-out
             for SRC in ./target/wasm32-unknown-unknown/release/*.wasm; do
               FILENAME=$(basename "$SRC")
-              wasm-opt -Os --signext-lowering "$SRC" -o "./wasm-out/$FILENAME"
+              wasm-opt -O1 --signext-lowering "$SRC" -o "./wasm-out/$FILENAME"
               chmod -x "./wasm-out/$FILENAME"
             done
             ls -lA ./wasm-out
