--- a/contracts/nois-gateway/Cargo.toml
+++ b/contracts/nois-gateway/Cargo.toml
@@ -17,8 +17,8 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-nois-payment = { path = "../../contracts/nois-payment"}
-nois-protocol = { path = "../../packages/nois-protocol"}
+nois-payment = { path = "../../contracts/nois-payment", features = ["library"] }
+nois-protocol = { path = "../../packages/nois-protocol" }
 drand-common = { path = "../../packages/drand-common" }
 nois.workspace = true
 cosmwasm-std = { version = "1.2.7", features = ["iterator", "ibc3", "cosmwasm_1_2"] }
