--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -541,7 +541,8 @@ jobs:
           command: cargo install --debug cosmwasm-check --version 1.3.1
       - run:
           name: Check Wasms
-          command: cosmwasm-check wasms/*.wasm
+          command: |
+            cosmwasm-check --available-capabilities cosmwasm_1_1,cosmwasm_1_2,iterator,staking,stargate wasms/*.wasm
       - save_cache:
           paths:
             - /usr/local/cargo/registry
