--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -538,7 +538,7 @@ jobs:
             - v2-check-wasm-rust:1.71.0-
       - run:
           name: Install cosmwasm-check
-          command: cargo install --debug cosmwasm-check --version 1.3.1
+          command: cargo install --debug cosmwasm-check
       - run:
           name: Check Wasms
           command: |
