--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ workflows:
 jobs:
   contract_nois_demo:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-demo
     steps:
       - checkout:
@@ -62,8 +62,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_demo-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_demo-rust:1.71.0-
+            - v2-contract_nois_demo-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_demo-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -78,11 +78,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_demo-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_demo-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_proxy:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-proxy
     steps:
       - checkout:
@@ -92,8 +92,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_proxy-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_proxy-rust:1.71.0-
+            - v2-contract_nois_proxy-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_proxy-rust:1.73.0-
       - run:
           name: Unit Tests (default features)
           environment:
@@ -113,11 +113,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_proxy-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_proxy-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_proxy_governance_owned:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-proxy-governance-owned
     steps:
       - checkout:
@@ -127,8 +127,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_proxy_governance_owned-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_proxy_governance_owned-rust:1.71.0-
+            - v2-contract_nois_proxy_governance_owned-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_proxy_governance_owned-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -143,11 +143,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_proxy_governance_owned-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_proxy_governance_owned-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_monitoring:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-monitoring
     steps:
       - checkout:
@@ -157,8 +157,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_monitoring-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_monitoring-rust:1.71.0-
+            - v2-contract_nois_monitoring-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_monitoring-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -173,11 +173,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_monitoring-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_monitoring-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_sink:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-sink
     steps:
       - checkout:
@@ -187,8 +187,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_sink-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_sink-rust:1.71.0-
+            - v2-contract_nois_sink-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_sink-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -203,11 +203,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_sink-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_sink-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_payment:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-sink
     steps:
       - checkout:
@@ -217,8 +217,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_payment-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_payment-rust:1.71.0-
+            - v2-contract_nois_payment-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_payment-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -233,11 +233,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_payment-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_payment-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_gateway:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-gateway
     steps:
       - checkout:
@@ -247,8 +247,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_gateway-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_gateway-rust:1.71.0-
+            - v2-contract_nois_gateway-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_gateway-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -263,11 +263,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_gateway-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_gateway-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_drand:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-drand
     steps:
       - checkout:
@@ -277,8 +277,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_drand-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_drand-rust:1.71.0-
+            - v2-contract_nois_drand-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_drand-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -293,11 +293,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_drand-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_drand-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_icecube:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/contracts/nois-icecube
     steps:
       - checkout:
@@ -307,8 +307,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_icecube-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_icecube-rust:1.71.0-
+            - v2-contract_nois_icecube-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_icecube-rust:1.73.0-
       - run:
           name: Unit Tests
           environment:
@@ -323,17 +323,17 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_icecube-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_icecube-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   coverage:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     steps:
       - checkout
       - restore_cache:
           keys:
-            - v2-coverage-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-coverage-rust:1.71.0-
+            - v2-coverage-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-coverage-rust:1.73.0-
       - run:
           name: Install dependencies
           command: |
@@ -381,11 +381,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-coverage-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-coverage-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   cw-multitest:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/packages/multitest
     steps:
       - checkout:
@@ -394,7 +394,7 @@ jobs:
 
   package_nois_protocol:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project/packages/nois-protocol
     steps:
       - checkout:
@@ -404,8 +404,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version; rustup target list --installed
       - restore_cache:
           keys:
-            - v2-package_nois_protocol-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-package_nois_protocol-rust:1.71.0-
+            - v2-package_nois_protocol-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-package_nois_protocol-rust:1.73.0-
       - run:
           name: Build library for native target
           command: cargo build --locked
@@ -418,11 +418,11 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-package_nois_protocol-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-package_nois_protocol-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   lint:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     steps:
       - checkout
       - run:
@@ -430,8 +430,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version; rustup target list --installed
       - restore_cache:
           keys:
-            - v2-lint-rust:1.71.0-{{ checksum "Cargo.lock" }}
-            - v2-lint-rust:1.71.0-
+            - v2-lint-rust:1.73.0-{{ checksum "Cargo.lock" }}
+            - v2-lint-rust:1.73.0-
       - run:
           name: Add rustfmt component
           command: rustup component add rustfmt
@@ -453,7 +453,7 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-lint-rust:1.71.0-{{ checksum "Cargo.lock" }}
+          key: v2-lint-rust:1.73.0-{{ checksum "Cargo.lock" }}
 
   # This runs one time on the top level to ensure all contracts compile properly into wasm.
   # We don't run the wasm build per contract build, and then reuse a lot of the same dependencies, so this speeds up CI time
@@ -461,7 +461,7 @@ jobs:
   # Resulting wasm files are stored to the workspace, so they can be used by the integration test downstream
   wasm_build:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     steps:
       - checkout:
           path: ~/project
@@ -470,8 +470,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-wasm_build-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-wasm_build-rust:1.71.0-
+            - v2-wasm_build-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-wasm_build-rust:1.73.0-
       - run:
           name: Add wasm32 target
           command: rustup target add wasm32-unknown-unknown
@@ -505,7 +505,7 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - ~/project/target
-          key: v2-wasm_build-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-wasm_build-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
       - persist_to_workspace:
           name: Save wasm contracts for integration test usage
           root: ./wasm-out
@@ -521,7 +521,7 @@ jobs:
 
   check-wasm:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     environment:
       CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
     steps:
@@ -534,8 +534,8 @@ jobs:
           at: wasms
       - restore_cache:
           keys:
-            - v2-check-wasm-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-check-wasm-rust:1.71.0-
+            - v2-check-wasm-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-check-wasm-rust:1.73.0-
       - run:
           name: Install cosmwasm-check
           command: cargo install --debug cosmwasm-check
@@ -547,7 +547,7 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - ~/project/target
-          key: v2-check-wasm-rust:1.71.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-check-wasm-rust:1.73.0-{{ checksum "~/project/Cargo.lock" }}
 
   ts-build:
     docker:
@@ -666,7 +666,7 @@ jobs:
       - run:
           name: Build development contracts
           command: |
-            docker run --volumes-from with_code cosmwasm/workspace-optimizer:0.14.0
+            docker run --volumes-from with_code cosmwasm/optimizer:0.15.0
             docker cp with_code:/code/artifacts ./artifacts
       - run:
           name: Show data
@@ -688,7 +688,7 @@ jobs:
 
   build_and_upload_schemas:
     docker:
-      - image: rust:1.71.0
+      - image: rust:1.73.0
     working_directory: ~/project
     steps:
       - checkout:
