--- a/contracts/nois-drand/Cargo.toml
+++ b/contracts/nois-drand/Cargo.toml
@@ -24,6 +24,7 @@ drand-common = { path = "../../packages/drand-common" }
 cosmwasm-std = { version = "1.4.0", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.4.0" }
 cw-storage-plus = { version = "1.1.0" }
+cw2.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 sha2 = "0.10.6"
