--- a/contracts/nois-gateway/Cargo.toml
+++ b/contracts/nois-gateway/Cargo.toml
@@ -25,6 +25,7 @@ nois.workspace = true
 cosmwasm-std = { version = "1.4.0", features = ["iterator", "ibc3", "cosmwasm_1_2"] }
 cosmwasm-schema = { version = "1.4.0" }
 cw-storage-plus = { version = "1.1.0" }
+cw2.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 sha2 = "0.10.6"
