--- a/contracts/nois-payment/Cargo.toml
+++ b/contracts/nois-payment/Cargo.toml
@@ -23,6 +23,7 @@ anybuf = "0.3.0"
 cosmwasm-std = { version = "1.4.0", features = ["stargate"] }
 cosmwasm-schema = { version = "1.4.0" }
 cw-storage-plus = { version = "1.1.0" }
+cw2.workspace = true
 nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
