--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -28,6 +28,7 @@ nois-protocol = { path = "../../packages/nois-protocol"}
 cosmwasm-std = { version = "1.4.0", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.4.0" }
 cw-storage-plus = { version = "1.1.0" }
+cw2.workspace = true
 nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
