--- a/contracts/nois-sink/Cargo.toml
+++ b/contracts/nois-sink/Cargo.toml
@@ -20,6 +20,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 cosmwasm-std = { version = "1.4.0", features = ["iterator"] }
 cosmwasm-schema = { version = "1.4.0" }
 cw-storage-plus = { version = "1.1.0" }
+cw2.workspace = true
 nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
