--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -551,7 +551,7 @@ jobs:
 
   ts-build:
     docker:
-      - image: circleci/node:16
+      - image: cimg/node:18.18
     working_directory: ~/ibc/tests
     steps:
       - checkout:
@@ -601,7 +601,7 @@ jobs:
           name: Install nodejs
           # In the current image, `sudo apt install nodejs` requires `sudo apt update` which is too slow
           command: |
-            curl -sL https://deb.nodesource.com/setup_16.x | sudo -E bash -
+            curl -sL https://deb.nodesource.com/setup_18.x | sudo -E bash -
             sudo apt-get install -y nodejs
       - run:
           name: Version information
