--- a/contracts/nois-drand/Cargo.toml
+++ b/contracts/nois-drand/Cargo.toml
@@ -32,3 +32,6 @@ sha2 = "0.10.6"
 # Drand dependencies
 hex = { version = "0.4" }
 drand-verify = "0.6.2"
+
+[dev-dependencies]
+hex-literal = { workspace = true }
