--- a/contracts/nois-drand/Cargo.toml
+++ b/contracts/nois-drand/Cargo.toml
@@ -12,18 +12,15 @@ license = "Apache-2.0"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-# for quicker tests, cargo test --lib
-# for more explicit tests, cargo test --features=backtraces
-backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
 [dependencies]
 nois.workspace = true
 drand-common = { path = "../../packages/drand-common" }
-cosmwasm-std = { version = "1.5.4", features = ["iterator", "ibc3"] }
-cosmwasm-schema = { version = "1.5.4" }
-cw-storage-plus = { version = "1.1.0" }
+cosmwasm-std = { version = "2", features = ["iterator"] }
+cosmwasm-schema = { version = "2" }
+cw-storage-plus = { version = "2" }
 cw2.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
