--- a/contracts/nois-gateway/Cargo.toml
+++ b/contracts/nois-gateway/Cargo.toml
@@ -12,9 +12,6 @@ license = "Apache-2.0"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-# for quicker tests, cargo test --lib
-# for more explicit tests, cargo test --features=backtraces
-backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 nois-drand = { path = "../../contracts/nois-drand", features = ["library"] }
@@ -22,9 +19,9 @@ nois-payment = { path = "../../contracts/nois-payment", features = ["library"] }
 nois-protocol = { path = "../../packages/nois-protocol" }
 drand-common = { path = "../../packages/drand-common" }
 nois.workspace = true
-cosmwasm-std = { version = "1.5.4", features = ["iterator", "ibc3", "cosmwasm_1_2"] }
-cosmwasm-schema = { version = "1.5.4" }
-cw-storage-plus = { version = "1.1.0" }
+cosmwasm-std = { version = "2", features = ["iterator", "cosmwasm_1_2"] }
+cosmwasm-schema = { version = "2" }
+cw-storage-plus = { version = "2" }
 cw2.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
