--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -12,9 +12,6 @@ license = "Apache-2.0"
 crate-type = ["cdylib", "rlib"]
 
 [features]
-# for quicker tests, cargo test --lib
-# for more explicit tests, cargo test --features=backtraces
-backtraces = ["cosmwasm-std/backtraces"]
 # use library feature to disable all instantiate/execute/query exports
 library = []
 
@@ -25,9 +22,9 @@ governance_owned = []
 [dependencies]
 anybuf = "0.3.0"
 nois-protocol = { path = "../../packages/nois-protocol"}
-cosmwasm-std = { version = "1.5.4", features = ["iterator", "ibc3"] }
-cosmwasm-schema = { version = "1.5.4" }
-cw-storage-plus = { version = "1.1.0" }
+cosmwasm-std = { version = "2", features = ["iterator", "stargate"] }
+cosmwasm-schema = { version = "2" }
+cw-storage-plus = { version = "2" }
 cw2.workspace = true
 nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
