--- a/packages/misc/Cargo.toml
+++ b/packages/misc/Cargo.toml
@@ -7,7 +7,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cosmwasm-std = { version = "1.5.4", features = ["ibc3"] }
+cosmwasm-std = { version = "2" }
 nois.workspace = true
 hex = { version = "0.4" }
 bech32 = "0.9.1"
