--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 
 [workspace.dependencies]
 # nois = { git = "https://github.com/noislabs/nois", branch = "add-published-time" }
-nois = "2.0.0-rc.1"
+nois = "2.0.0"
 cw2 = "2"
 
 [profile.release.package.nois-protocol]
